fixed horizontal scrollbar issue on login page

--- a/src/App.css
+++ b/src/App.css
@@ -94,6 +94,10 @@
 
 /* --------Login--------*/
 
+#login-row {
+  max-width: 100%;
+}
+
 #login-left-col {
   /* solid blue */
   /* background-color: rgb(11, 7, 71); */
@@ -120,6 +124,10 @@
   font-size: 64px;
   font-weight: 600;
   /* font-variant: small-caps; */
+}
+
+#login-right-col {
+  width: 100%;
 }
 
 .login-image {
@@ -160,8 +168,8 @@
   padding-bottom: 1%;
   top: 0;
   z-index: 100;
-  position: sticky;
-  /* visibility: hidden; */
+  position: fixed;
+  visibility: hidden;
 }
 
 .main-nav {
